added all toys page view details page

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "aos": "^2.3.4",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
+    "flowbite": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-tabs": "^6.0.1",
+    "sweetalert2": "^11.7.5",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
